js/src/jit/Recover.h
@@ -51,6 +51,7 @@ namespace jit {
     _(RegExpExec)                               \
     _(RegExpTest)                               \
     _(RegExpReplace)                            \
+    _(StringReplace)                            \
     _(TypeOf)                                   \
     _(ToDouble)                                 \
     _(ToFloat32)                                \
@@ -510,6 +511,18 @@ class RRegExpReplace MOZ_FINAL : public RInstruction
 {
   public:
     RINSTRUCTION_HEADER_(RegExpReplace)
+
+    virtual uint32_t numOperands() const {
+        return 3;
+    }
+
+    bool recover(JSContext *cx, SnapshotIterator &iter) const;
+};
+
+class RStringReplace MOZ_FINAL : public RInstruction
+{
+  public:
+    RINSTRUCTION_HEADER_(StringReplace)
 
     virtual uint32_t numOperands() const {
         return 3;
